--- a/dev/changelog.html
+++ b/dev/changelog.html
@@ -562,6 +562,20 @@
     </div>
 </div>
 
+<!-- Edit Device Name -->
+<div class="release">
+    <div class="release-header">
+        <div><div class="version-num">Edit Device Name</div><div class="release-date">Discussed Feb 26 session</div></div>
+        <span class="release-tag tag-low">Low</span>
+    </div>
+    <div class="release-body">
+        <div class="change-group">
+            <div class="change-group-label">Problem &amp; Solution</div>
+            <p class="note">Device name is prompted once on first launch and stored in localStorage. There is currently no way to change it after the fact. Add an editable field in Settings so users can correct a name entered incorrectly (e.g. first name only) or update it when a device changes hands. Device name appears in PACE entry audit trail and cloud session &ldquo;recorded by&rdquo; attribution.</p>
+        </div>
+    </div>
+</div>
+
 <!-- Delete Propagation -->
 <div class="release">
     <div class="release-header">
