--- a/dev/tools/pace-import.html
+++ b/dev/tools/pace-import.html
@@ -79,12 +79,12 @@
 <script>
 // ─── Firebase config ───────────────────────────────────────────────────────
 const firebaseConfig = {
-  apiKey: "AIzaSyBRuPUpVJnCbCkVpFLR4JBsoBZUHPkSFhc",
-  authDomain: "toastmaster-timer.firebaseapp.com",
-  projectId: "toastmaster-timer",
-  storageBucket: "toastmaster-timer.appspot.com",
-  messagingSenderId: "633783574501",
-  appId: "1:633783574501:web:60c6e8de8dc63ddfe06ecb"
+  apiKey: "AIzaSyC2QfJzXrVg9TmUasmtfLbegSlUGmg5JR4",
+  authDomain: "sdtm-tm-app.firebaseapp.com",
+  projectId: "sdtm-tm-app",
+  storageBucket: "sdtm-tm-app.firebasestorage.app",
+  messagingSenderId: "429843202069",
+  appId: "1:429843202069:web:eec66b741bc3fc90934e1c"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
