--- a/dev/index.html
+++ b/dev/index.html
@@ -2127,12 +2127,12 @@ function showPaceEmbedModal() {
     const leaderboardSnippet =
 `<!-- PACE Leaderboard (Southern Dutchess Toastmasters) -->
 <div id="pace-leaderboard"></div>
-<script src="${baseUrl}?club=${code}&type=leaderboard&target=pace-leaderboard"><\/script>`;
+<script src="${baseUrl}?club=${code}&type=leaderboard&target=pace-leaderboard">` + '<' + `/script>`;
 
     const chartSnippet =
 `<!-- PACE Bar Chart (Southern Dutchess Toastmasters) -->
 <div id="pace-chart"></div>
-<script src="${baseUrl}?club=${code}&type=chart&target=pace-chart"><\/script>`;
+<script src="${baseUrl}?club=${code}&type=chart&target=pace-chart">` + '<' + `/script>`;
 
     openModal('Embed PACE Widget',
         `<div style="margin-bottom:16px;">
