--- a/dev/test-widget.html
+++ b/dev/test-widget.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<div id="pace-chart"></div>
 <script src="https://kevinpshan.github.io/TMTools/pace-widget.js?club=4FVY-L7JR&type=chart&target=pace-chart"></script>
+
+</body>
+</html>
