uopdated PACE Name

--- a/dev/index.html
+++ b/dev/index.html
@@ -195,7 +195,7 @@
         <div class="main-menu-card" onclick="showScreen('report')"><div class="card-content"><h3>Counter Report</h3><p>View totals</p></div><div class="icon">📊</div></div>
     </div>
     <div id="clubMode" class="container" style="display:none;flex:1;min-height:0;overflow-y:auto;">
-        <div class="main-menu-card" onclick="showScreen('pace')"><div class="card-content"><h3 style="color:var(--green);">PACE</h3><p>Club participation tracker</p></div><div class="icon" style="color:var(--green);">🏆</div></div>
+        <div class="main-menu-card" onclick="showScreen('pace')"><div class="card-content"><h3 style="color:var(--green);">PACE</h3><p>Participating and Achieving Competence and Excellence</p></div><div class="icon" style="color:var(--green);">🏆</div></div>
     </div>
     <div class="credit-footer">
         <div class="resource-row"><a href="https://bit.ly/m/SDTM" target="_blank" class="res-btn">Website ↗</a><a href="manual.html" class="res-btn">Manual ↗</a></div>
@@ -390,7 +390,7 @@
 <!-- PACE LEADERBOARD -->
 
 <div id="pace" class="screen">
-    <div class="header"><h1>PACE</h1><div class="subtitle" id="paceSubtitle">Club participation</div></div>
+    <div class="header"><h1>PACE</h1><div class="subtitle" id="paceSubtitle">Participating and Achieving Competence and Excellence</div></div>
     <div class="pace-year-bar">
         <button class="pace-year-btn" onclick="changePaceYear(1)">&#8249;</button>
         <span class="pace-year-label" id="paceYearLabel">2025-26</span>
