--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,7 @@
         h1 { margin:0; font-size:clamp(34px,5vw,55px); font-weight:800; color:#1C1C1E; }
         .subtitle { font-size:clamp(17px,2.5vw,26px); margin-top:5px; color:var(--accent); font-weight:700; }
         .settings-icon { position:absolute; top:35px; right:20px; font-size:32px; color:var(--accent); cursor:pointer; padding:5px; z-index:10; }
-        .tab-container { display:flex; background:#E3E3E8; border-radius:10px; padding:2px; margin:0 20px 15px; flex-shrink:0; }
+        .tab-container { display:flex; background:#E3E3E8; border-radius:10px; padding:2px; gap:3px; margin:0 20px 15px; flex-shrink:0; }
         .tab { flex:1; padding:12px; text-align:center; font-weight:600; font-size:16px; border-radius:8px; cursor:pointer; transition:all 0.2s; color:var(--subtext); }
         .tab.active { background:white; color:var(--accent); box-shadow:0 2px 4px rgba(0,0,0,0.1); }
         .container { flex:1; display:flex; flex-direction:column; padding:0 20px; gap:15px; overflow-y:auto; min-height:0; max-width:950px; margin:0 auto; width:100%; box-sizing:border-box; }
@@ -176,7 +176,7 @@
     </div>
     <div class="tab-container">
         <div id="tabTimer" class="tab active" onclick="switchMode('timer')">Timer</div>
-        <div id="tabCounter" class="tab" onclick="switchMode('counter')">Ah-Counter</div>
+        <div id="tabCounter" class="tab" onclick="switchMode('counter')">Verbal</div>
         <div id="tabClub" class="tab" onclick="switchMode('club')">Club</div>
     </div>
     <div id="staleDataBanner" style="display:none;margin:0 20px 10px;background:#FFF9E6;border:2px solid var(--gold);border-radius:14px;padding:14px 16px;display:none;flex-direction:row;justify-content:space-between;align-items:center;gap:12px;">
@@ -1401,7 +1401,7 @@ function openModal(t,b,c,cancelLabel,confirmLabel){
     document.getElementById('modalConfirm').onclick=()=>{c();document.getElementById('customModal').style.display='none';};
     document.getElementById('modalCancel').onclick=()=>{document.getElementById('customModal').style.display='none';};
 }function askCustomTime(el){const saved=JSON.parse(localStorage.getItem(clubKey('custom_limits'))||'{"g":5,"cy":6,"r":7}');const title=currentMode==='timer'?"Thresholds":"Enter Custom Role";const body=currentMode==='timer'?`<label>Green (Min):</label><input type="number" id="cg" value="${saved.g}"><label>Yellow (Target):</label><input type="number" id="cy" value="${saved.cy}"><label>Red (Max):</label><input type="number" id="cr" value="${saved.r}">`:`<label>Role Name:</label><input type="text" id="customRole" placeholder="e.g. JOKE MASTER" style="text-transform:uppercase">`;openModal(title,body,()=>{if(currentMode==='timer'){const g=document.getElementById('cg').value,y=document.getElementById('cy').value,r=document.getElementById('cr').value;lims={g:g*60,y:y*60,r:r*60};localStorage.setItem(clubKey('custom_limits'),JSON.stringify({g,cy:y,r}));document.getElementById('customLabel').innerText=`${g}-${r}m`;selectedTypeLabel='CUSTOM';}else{selectedTypeLabel=document.getElementById('customRole').value.toUpperCase();document.getElementById('customLabel').innerText=selectedTypeLabel;}document.querySelectorAll('.role-card').forEach(c=>c.classList.remove('selected'));el.classList.add('selected');});}
-function switchMode(m){currentMode=m;document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));const tabId=m==='timer'?'tabTimer':m==='counter'?'tabCounter':'tabClub';document.getElementById(tabId).classList.add('active');const titles={'timer':'Meeting Timer','counter':'Ah-Counter','club':'Club Tools'};document.getElementById('modeTitle').innerText=titles[m]||'Meeting Timer';document.getElementById('timerMode').style.display=m==='timer'?'flex':'none';document.getElementById('counterMode').style.display=m==='counter'?'flex':'none';document.getElementById('clubMode').style.display=m==='club'?'flex':'none';}
+function switchMode(m){currentMode=m;document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));const tabId=m==='timer'?'tabTimer':m==='counter'?'tabCounter':'tabClub';document.getElementById(tabId).classList.add('active');const titles={'timer':'Meeting Timer','counter':'Verbal','club':'Club Tools'};document.getElementById('modeTitle').innerText=titles[m]||'Meeting Timer';document.getElementById('timerMode').style.display=m==='timer'?'flex':'none';document.getElementById('counterMode').style.display=m==='counter'?'flex':'none';document.getElementById('clubMode').style.display=m==='club'?'flex':'none';}
 
 /* ============ START HANDLER ============ */
 function handleStart(){
